(include_subdirs unqualified)
(library
 (name fstar_guts)
 (public_name fstar-guts)
 (libraries
    batteries
    zarith
    stdint
    yojson
    ppxlib
    dynlink
    menhirLib
    pprint
    sedlex
 )
 (modes native)
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson sedlex.ppx))
 (wrapped true)
 ; ^ This is the default, but we make it explicit since we absolutely 
 ; need modules here to be qualified to not clash with the compiler
 ; internal modules.
)

(menhir
 (modules FStarC_Parser_Parse))

(rule
  (target FStarC_Version.ml)
  (deps (:script make_fstar_version.sh)
        (:version ../../version.txt))
  (action
    (progn
      (copy %{version} version.txt)
      (with-stdout-to
        FStarC_Version.ml
        (run bash %{script})))))
