(include_subdirs unqualified)
(executable
 (package fstarc)
 (name main)
 (public_name fstar.exe)
 (libraries
    ; Can we just say we extend fstar_bare instead of _guts, and duplicating main?
    fstar-guts
    fstar_plugins
    memtrace
 )
 (link_flags "-linkall")
 (modes (native exe))
 (preprocess (pps ppx_deriving.show ppx_deriving_yojson sedlex.ppx))
)
